Bootstrapping Magic Character Sheet v1.

--- a/public/dcm-display.css
+++ b/public/dcm-display.css
@@ -2,6 +2,9 @@ h1 {
 	font-family:      Georgia;
 	font-size:        3.5em;
 }
+*[title] {
+	cursor: help;
+}
 .dcm-border {
 	border:           1px solid gray;
 }
