--- a/views/users/chars.jade
+++ b/views/users/chars.jade
@@ -1,3 +1,36 @@
+-	function render(__str, __data) {
+-		Object.keys(__data).forEach(function(key) {
+-			__str = __str.replace("{"+key+"}", __data[key].toString());
+-		});
+-		return __str;
+-	}
+//- create a standard menu link
+mixin menuLink(__item, __data)
+	- var __data  = __data || {};
+	- var __curr  = __item.url === _Menu.currentURL;
+	- var __url   = __item.url ? (__curr ? null : render(__item.url, __data)) : null;
+	- var __title = render(__item.title, __data);
+	li(class=__curr ? "active" : null)
+		if Array.isArray(__item.sign)
+			a(href=__url)
+				span.hidden-xs(class=__item.sign.join(" "))
+				span.visible-xs!=__title
+		else
+			a(href=__url)!=__title
+
+//- create a menu dropdown item
+mixin menuDropdown(__item, __data)
+	- var __data  = __data || {};
+	li.dropdown
+		a.dropdown-toggle(data-toggle="dropdown")!=render(__item.title, __data)
+			b.caret
+		ul.dropdown-menu
+			each __link in __item.dropdown
+				if __link.title
+					+menuLink(__link, __data)
+				else
+					li.divider
+
 doctype html
 html(lang="de")
 	head
@@ -28,30 +61,27 @@ html(lang="de")
 						span.icon-bar
 						span.icon-bar
 						span.icon-bar
-					a.navbar-brand DCM
+					span.navbar-brand DCM
 				#navbar-collapse-chars.collapse.navbar-collapse
+					- var data = _FRCount ? { badge: '<span class="badge">'+_FRCount+'</span>' } : { badge: "" };
 					ul.nav.navbar-nav
 						each __link in _Menu.left
-							- var __isCurrent = __link.url === _Menu.currentURL;
-							if __isCurrent
-								li.active
-									a=__link.title
+							if Array.isArray(__link.dropdown)
+								+menuDropdown(__link, data)
 							else
-								li
-									a(href=__link.url)=__link.title
+								+menuLink(__link, data)
 					ul.nav.navbar-nav.navbar-right
 						each __link in _Menu.right
-							- var __isCurrent = __link.url === _Menu.currentURL;
-							li
-								a(href=__isCurrent ? null : __link.url, title=__link.title)
-									span.hidden-xs(class=__link.sign.join(" ")) &nbsp;
-									span.visible-xs=__link.title
+							if Array.isArray(__link.dropdown)
+								+menuDropdown(__link, data)
+							else
+								+menuLink(__link, data)
 						if _User.isAdmin
 							li
 								a(href="/db", title="Manage DB")
 									span.hidden-xs.fa.fa-hdd-o
 									span.visible-xs Manage DB
-		.container
+		main.container
 			.page-header.text-center
 				h1
 					span.fa.fa-file-text-o &nbsp;
