Fixing a bug in Disadvantage list. Changing Magic Character Sheet to using Bootstrap (spell table left as is, because the amount of data can’t be sensibly condensed).

--- a/views/edit-held/procon.jade
+++ b/views/edit-held/procon.jade
@@ -573,17 +573,17 @@ html(lang="de")
 								+stagedProCon("Angst vor Feuer", 1, { max:20 })
 								+stagedProCon("Angst vor Wasser", 1, { max:20 })
 								li
-									input(name="Nachteile", type="checkbox", value="Angst vor ", id="nachteil_8").zusatz.stufe
+									input(name="Nachteile", type="checkbox", value="Angst vor ", id="nachteil_8").zusatz_text.stufe
 									label(for="nachteil_8") Angst vor 
 									input(type="text")
 									input(type="number", min="1", max="20", step="1")
 								li
-									input(name="Nachteile", type="checkbox", value="Angst vor ", id="nachteil_9").zusatz.stufe
+									input(name="Nachteile", type="checkbox", value="Angst vor ", id="nachteil_9").zusatz_text.stufe
 									label(for="nachteil_9") Angst vor 
 									input(type="text")
 									input(type="number", min="1", max="20", step="1")
 								li
-									input(name="Nachteile", type="checkbox", value="Angst vor ", id="nachteil_10").zusatz.stufe
+									input(name="Nachteile", type="checkbox", value="Angst vor ", id="nachteil_10").zusatz_text.stufe
 									label(for="nachteil_10") Angst vor 
 									input(type="text")
 									input(type="number", min="1", max="20", step="1")
