--- a/views/held/magie.jade
+++ b/views/held/magie.jade
@@ -90,6 +90,42 @@ html(lang="de")
 			.dcm-col-divider {
 				border-bottom:    1px solid silver;
 			}
+			.fett {
+				font-weight:      bold;
+			}
+			.zauber {
+				margin:           0 auto 20px;
+				width:            81em;
+			}
+			.zauber td,
+			.zauber th {
+				border:           1px solid #eee;
+				padding:          0.2em 1em;
+			}
+			.zauber th {
+				background-color: #eee;
+				border-color:     white;
+				text-align:       center;
+			}
+			.meta td {
+				background-color: #eee;
+				color:            gray;
+				font-style:       italic;
+			}
+			.zauber > tbody > tr:first-child > td {
+				background-color: #ccc;
+				cursor:           pointer;
+				height:           2em;
+			}
+			.zauber td:first-child {
+				text-align:       left;
+			}
+			.hide-rows tr {
+				display:          none;
+			}
+			.hide-rows tr:first-child {
+				display:          table-row;
+			}
 	body
 		nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
 			.container-fluid
@@ -144,9 +180,9 @@ html(lang="de")
 				if _Held.SF
 					.panel-body
 						.container-fluid
-							.text-center.dcm-header.dcm-list-item.dcm-border Karmale Sonderfertigkeiten
+							.text-center.dcm-header.dcm-list-item.dcm-border Magische Sonderfertigkeiten
 							.row
-								each __sf in _Held.SF.geweiht
+								each __sf in _Held.SF.magisch
 									.col-sm-6.col-lg-4
 										.dcm-list-item=__sf
 			// Attribute
@@ -174,6 +210,69 @@ html(lang="de")
 
 			// maybe use Responsive Tables (Bootstrap) ??
 
+			if _Held.Magie && Array.isArray(_Held.Magie.Zauber) && _Held.Magie.Zauber.length
+			.panel.panel-default#zbr
+				.panel-heading.dcm-caption Zaubersprüche
+			table.zauber.text-center
+				colgroup
+					col(style="width: 15em;")
+					col(style="width: 8em;")
+					col(style="width: 5em;", span="2")
+					col(style="width: 12em;", span="4")
+				thead
+					tr
+						th Zauber
+						th Probe
+						th ZfW
+						th Mod
+						th ZD
+						th AsP
+						th WD
+						th RW
+					tr
+						th Spezialisierungen
+						th(colspan="3") Spontane Mod.
+						th Merkmale
+						th Ziel
+						th Repräsentation
+						th Komplexität
+				each __spell in _Held.Magie.Zauber
+					tbody.hide-rows
+						tr
+							td.fett= __spell._zauber.Name
+							td(title=__spell._zauber.Probe.join(' · '))= __spell._zauber.Probe.map(function(item) { return _Held.Attribute[item] ? _Held.Attribute[item].wert : item; }).join(' · ')
+							td.fett= __spell.ZfW
+							td= __spell._zauber.modifikation.typ
+							td= __spell._zauber.cast.ZD
+							td= __spell._zauber.cast.AsP
+							td= __spell._zauber.cast.WD
+							td= __spell._zauber.cast.RW
+						tr.meta
+							td
+								if Array.isArray(__spell.Spezialisierung) && __spell.Spezialisierung.length > 0
+									__spell.Spezialisierung.join(', ')
+							td(colspan="3")= __spell._zauber.SpoMod.join(', ')
+							td= __spell._zauber.Merkmale.join(', ')
+							td= __spell._zauber.Ziel.join(', ')
+							td= __spell.Repräsentation
+							td= __spell._zauber.Komplexität + " (" + __spell.Lernstufe + ")"
+						if Array.isArray(__spell._zauber.Varianten)
+							each __variant in __spell._zauber.Varianten.filter(function(item) { return (item.Repräsentationen.indexOf(__spell.Repräsentation) > -1) })
+								tr
+									td="- "+__variant.Name
+									td=__variant.modifikation.probe
+									td
+										if __variant.modifikation.minZfW
+											| (#{__variant.modifikation.minZfW})
+									td=__variant.modifikation.typ
+									td= __variant.cast.ZD
+									td= __variant.cast.AsP
+									td= __variant.cast.WD
+									td= __variant.cast.RW
+			script.
+				$('.zauber').on('click', 'tbody', function(evt) {
+					$(this).toggleClass('hide-rows');
+				});
 			// Ritualkenntnis
 			if _Held.Magie && Array.isArray(_Held.Magie.Ritualkenntnis) && _Held.Magie.Ritualkenntnis.length
 				section.panel.panel-default#rkw
@@ -266,7 +365,7 @@ html(lang="de")
 											if intersect(__rks, ["Shm", "Elf"]).length
 												.col-xs-12=__rit.Talent.join(', ')
 											else if Array.isArray(__rit.Probe) && __rit.Probe.length > 0
-												.col-xs-12(title=__rit.Probe.join(' · '))=__rit.Probe.map(function(item) { return Attribute[item] ? Attribute[item].wert : item; }).join(' · ')
+												.col-xs-12(title=__rit.Probe.join(' · '))=__rit.Probe.map(function(item) { return _Held.Attribute[item] ? _Held.Attribute[item].wert : item; }).join(' · ')
 											else
 												.col-xs-12 &nbsp;
 										.row
