--- a/views/error-message.jade
+++ b/views/error-message.jade
@@ -1,11 +1,39 @@
-mixin menuItem(__item)
-	li
-		if Array.isArray(__item.sign)
-			a(href=__item.url, title=__item.title)
-				span.hidden-xs(class=__item.sign.join(" "))
-				span.visible-xs=__item.title
-		else
-			a(href=__item.url)=__item.title
+-	function render(__str, __data) {
+-		Object.keys(__data).forEach(function(key) {
+-			__str = __str.replace("{"+key+"}", __data[key].toString());
+-		});
+-		return __str;
+-	}
+
+//- create a standard menu link
+mixin menuLink(__item, __data)
+	- var __data  = __data || {};
+	- var __curr  = __item.url === _Menu.currentURL;
+	- var __url   = __item.url ? (__curr ? null : render(__item.url, __data)) : null;
+	- var __title = render(__item.title, __data);
+	if Array.isArray(__item.dropdown)
+		+menuDropdown(__item, __data)
+	else
+		li(class=__curr ? "active" : null)
+			if Array.isArray(__item.sign)
+				a(href=__url, title=__title)
+					span.hidden-xs(class=__item.sign.join(" "))
+					span.visible-xs!=__title
+			else
+				a(href=__url)!=__title
+
+//- create a menu dropdown item
+mixin menuDropdown(__item, __data)
+	- var __data  = __data || {};
+	li.dropdown
+		a.dropdown-toggle(data-toggle="dropdown")!=render(__item.title, __data)
+			b.caret
+		ul.dropdown-menu
+			each __link in __item.dropdown
+				if __link.title
+					+menuLink(__link, __data)
+				else
+					li.divider
 
 doctype html
 html(lang="de")
@@ -17,20 +45,31 @@ html(lang="de")
 		script(src="//code.jquery.com/jquery.min.js")
 		script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
 	body
-		- var __menu = _Menu.default;
-		if _User
-			- __menu = _Menu.profil;
-			
 		nav.navbar.navbar-default(role="navigation")
 			.container-fluid
 				.navbar-header
-					a.navbar-brand DCM
-				ul.nav.navbar-nav
-					each __link in __menu.left
-						+menuItem(__link)
-				ul.nav.navbar-nav.navbar-right
-					each __link in __menu.right
-						+menuItem(__link)
+					button.navbar-toggle(type="button", data-toggle="collapse", data-target="#navbar-collapse-chars")
+						span.sr-only Navigation
+						span.icon-bar
+						span.icon-bar
+						span.icon-bar
+					span.navbar-brand DCM
+				#navbar-collapse-chars.collapse.navbar-collapse
+					- var __data = { badge: "" };
+					- var __menu = _Menu.default;
+					if _User
+						- __menu = _Menu.profil;
+					ul.nav.navbar-nav
+						each __link in __menu.left
+							+menuLink(__link, __data)
+					ul.nav.navbar-nav.navbar-right
+						each __link in __menu.right
+							+menuLink(__link, __data)
+						if _User.isAdmin
+							li
+								a(href="/db", title="Manage DB")
+									span.hidden-xs.fa.fa-hdd-o
+									span.visible-xs Manage DB
 		.container
 			.page-header.text-center
 				h1 Huch, ein Fehler ist aufgetreten!
