--- a/views/users/friends.jade
+++ b/views/users/friends.jade
@@ -4,19 +4,23 @@
 -		});
 -		return __str;
 -	}
+
 //- create a standard menu link
 mixin menuLink(__item, __data)
 	- var __data  = __data || {};
 	- var __curr  = __item.url === _Menu.currentURL;
 	- var __url   = __item.url ? (__curr ? null : render(__item.url, __data)) : null;
 	- var __title = render(__item.title, __data);
-	li(class=__curr ? "active" : null)
-		if Array.isArray(__item.sign)
-			a(href=__url)
-				span.hidden-xs(class=__item.sign.join(" "))
-				span.visible-xs!=__title
-		else
-			a(href=__url)!=__title
+	if Array.isArray(__item.dropdown)
+		+menuDropdown(__item, __data)
+	else
+		li(class=__curr ? "active" : null)
+			if Array.isArray(__item.sign)
+				a(href=__url, title=__title)
+					span.hidden-xs(class=__item.sign.join(" "))
+					span.visible-xs!=__title
+			else
+				a(href=__url)!=__title
 
 //- create a menu dropdown item
 mixin menuDropdown(__item, __data)
@@ -78,29 +82,24 @@ html(lang="de")
 					- var data = _Inbox.length ? { badge: '<span class="badge">'+_Inbox.length+'</span>' } : { badge: "" };
 					ul.nav.navbar-nav
 						each __link in _Menu.left
-							if Array.isArray(__link.dropdown)
-								+menuDropdown(__link, data)
-							else
-								+menuLink(__link, data)
+							+menuLink(__link, data)
 					ul.nav.navbar-nav.navbar-right
 						each __link in _Menu.right
-							if Array.isArray(__link.dropdown)
-								+menuDropdown(__link, data)
-							else
-								+menuLink(__link, data)
+							+menuLink(__link, data)
 						if _User.isAdmin
 							li
 								a(href="/db", title="Manage DB")
 									span.hidden-xs.fa.fa-hdd-o
 									span.visible-xs Manage DB
-		.container
+		header.container
 			.page-header.text-center
 				h1
 					span.fa.fa-users &nbsp;
 					|  Freunde
+		main.container
 			.row
 				.col-sm-6
-					.panel.panel-default
+					section.panel.panel-default
 						.panel-heading
 							h4
 								span.fa.fa-users &nbsp;
@@ -116,7 +115,7 @@ html(lang="de")
 										input(type="checkbox", name="friends[]", value=__friend._id, checked)
 										|  #{__friend.local.name}
 				.col-sm-6
-					.panel.panel-default
+					section.panel.panel-default
 						.panel-heading
 							h4
 								span.fa.fa-users &nbsp;
@@ -129,7 +128,7 @@ html(lang="de")
 								li.list-group-item=__friend.local.name
 			.row
 				.col-sm-6
-					.panel.panel-default
+					section.panel.panel-default
 						.panel-heading
 							h4
 								span.fa.fa-search &nbsp;
@@ -140,7 +139,7 @@ html(lang="de")
 							.form-group.text-center
 								button#empty.btn.btn-default Neue Suche
 				.col-sm-6
-					.panel.panel-default
+					section.panel.panel-default
 						.panel-heading
 							h4
 								span.fa.fa-bullhorn &nbsp;
@@ -153,7 +152,7 @@ html(lang="de")
 						ul.list-group
 							each __msg in _Outbox
 								li.list-group-item=__msg.recipient.local.name
-					.panel.panel-default
+					section.panel.panel-default
 						.panel-heading
 							h4
 								span.fa.fa-thumbs-o-up &nbsp;
