Applying Character Sheet changes to the attached JavaScript file.

--- a/views/about.jade
+++ b/views/about.jade
@@ -40,9 +40,10 @@ html(lang="de")
 	head
 		meta(charset="utf-8")
 		title DCM – DSA Charakter Manager
-		//link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css")
 		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
 		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
+		script(src="//code.jquery.com/jquery-2.1.0.min.js")
+		script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
 		style.
 			ol.dcm-list li {
 				padding-top:    0.2em;
