--- a/views/held/geweiht.jade
+++ b/views/held/geweiht.jade
@@ -61,7 +61,7 @@ html(lang="de")
 		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
 		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
 		link(rel="stylesheet", href="/dcm-display.css")
-		script(src="//code.jquery.com/jquery.min.js")
+		script(src="//code.jquery.com/jquery-2.1.0.min.js")
 		script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
 		style.
 			body {
