Changing Character create form to using Bootstrap.

--- a/views/users/chars.jade
+++ b/views/users/chars.jade
@@ -79,7 +79,7 @@ html(lang="de")
 								a(href="/db", title="Manage DB")
 									span.hidden-xs.fa.fa-hdd-o
 									span.visible-xs Manage DB
-		main.container
+		header.container
 			.page-header.text-center
 				h1
 					span.fa.fa-file-text-o &nbsp;
@@ -97,7 +97,7 @@ html(lang="de")
 					a(href="/papierkorb")
 						span.fa.fa-trash-o
 						|  gelöschte Helden
-					
+		main.container
 			.panel.panel-default
 				.panel-heading
 					h4 Meine Helden
